# sinnergasm

./: .gitignore  Cargo.toml  Makefile  server_req.conf  vm.txt
cli/: Cargo.toml
cli/src/: health.rs  main.rs
common/: Cargo.toml  build.rs
common/src/: errors.rs  grpc_client.rs  lib.rs  options.rs  sinnergasm.proto
container/: build.containerfile  serve.containerfile
controller/: Cargo.toml  controller.drawio
controller/src/: control.rs  display.rs  display2.rs  events.rs  grab.rs  handler.rs  listener.rs  main.rs  prison.rs  state.rs
infra/: distribution_bucket.tf.txt  index.html  main.tf
keys/: ca.crt  ca_req.conf  token.txt
replicator/: Cargo.toml
resources/: ca.crt  token.txt  v3_end.cnf
scripts/: create_key_codes.py  generate_keys.txt
server/: Cargo.toml
server/src/: actor.rs  common.rs  events.rs  main.rs  serve.rs  workspace.rs  workspace_server.rs  workspaces.rs
server/src/actors/: device_map.rs  download_manager.rs  mod.rs  simulate.rs  workspace.rs
simulator/: Cargo.toml
simulator/src/: display.rs  events.rs  handler.rs  listener.rs  main.rs  simulate.rs
ui_common/: Cargo.toml
ui_common/src/: device_display.rs  download.rs  events.rs  lib.rs  subscribe.rs  target.rs  translation.rs  upload.rs
upload_directory/: simulate
