[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sinctl"
path = "src/main.rs"

[dependencies]
sinnergism_common = { path = "../common" }

tonic = { version = "0.9.2", features = ["tls"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.14"
anyhow = "1.0.75"
clap = "4.4.6"
