[package]
name = "sinnergism_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "sinnergasm"
path = "src/lib.rs"

[features]
use-rdev = ["rdev"]

[dependencies]
cargo-limit = "0.0.10"
prost = "0.11.9"
tonic = "0.9.2"
rdev = { version = "0.5.3", optional = true }

[build-dependencies]
# prost-build = "0.11.9"
tonic-build = "0.9.2"
