[package]
name = "sinnergism_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "sinnergasm"
path = "src/lib.rs"

[dependencies]
cargo-limit = "0.0.10"
prost = "0.11.9"
anyhow = "1.0.75"
tonic = { version = "0.9.2", features = ["tls"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.14"

# async-stream = "0.3.5"

[build-dependencies]
# prost-build = "0.11.9"
tonic-build = "0.9.2"
