[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "control"
path = "src/control.rs"

[dependencies]
sinnergism_common = { path = "../common" }

rdev = "0.5.3"
druid = "0.8.3"

tonic = "0.9.2"
# tonic = "0.10.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
anyhow = "1.0.75"
