[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "serve"
path = "src/serve.rs"

[dependencies]
async-stream = "0.3.5"
futures = "0.3.28"
futures-core = "0.3.28"
sinnergism_common = { path = "../common" }

tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.9.2"
tokio-stream = "0.1.14"
tonic-health = "0.10.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
tonic-build = "0.9"
