[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulate"
path = "src/simulate.rs"

[dependencies]
sinnergism_common = { path = "../common", features = ["use-rdev"] }
sinnergism_ui_common = { path = "../ui_common" }

enigo = "0.1.2"
tonic = { version = "0.9.2", features = ["tls"]}
# tonic = "0.10.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.14"
anyhow = "1.0.75"
rdev = "0.5.3"
druid = "0.8"
futures = "0.3.28"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

